--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 solana-program = "~1.9"
 borsh = "0.9.3"
 thiserror = "1.0.31"
+spl-token = { version="3.2.0", features=["no-entrypoint"] }
+spl-associated-token-account = { version="1.0.5", features=["no-entrypoint"]}
 
 [lib]
 crate-type = ["cdylib", "lib"]
